# FlightPath

./: .gitignore  Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8hpp.html  Application_8hpp.js  Application_8hpp__dep__incl.map  Application_8hpp__dep__incl.md5  Application_8hpp__incl.map  Application_8hpp__incl.md5  Application_8hpp_source.html  Attitude_8hpp.html  Attitude_8hpp.js  Attitude_8hpp__dep__incl.map  Attitude_8hpp__dep__incl.md5  Attitude_8hpp__incl.map  Attitude_8hpp__incl.md5  Attitude_8hpp_source.html  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  Error_8hpp.html  Error_8hpp.js  Error_8hpp__dep__incl.map  Error_8hpp__dep__incl.md5  Error_8hpp__incl.map  Error_8hpp__incl.md5  Error_8hpp_source.html  Exception_8cpp.html  Exception_8cpp__incl.map  Exception_8cpp__incl.md5  Exception_8hpp.html  Exception_8hpp.js  Exception_8hpp__dep__incl.map  Exception_8hpp__dep__incl.md5  Exception_8hpp__incl.map  Exception_8hpp__incl.md5  Exception_8hpp_source.html  KML_8hpp.html  (+159 more)
.github/workflows/: build-and-test.yml  build.yml  coverage.yml  release.yml  tests.yml
data/: 2016-12-13_FlightSimulatur_Output.txt  2017-01-17_Graz_Taxi.txt  2017-01-24_TestLog.txt  Graz-Gleichenberg.txt  UnitTest.txt
doc/: CMakeLists.txt
docker/: Dockerfile  docker-compose.yml
doxygen/: CMakeLists.txt  Doxyfile.in
include/: Application.hpp  Attitude.hpp  Error.hpp  Exception.hpp  KML.hpp  Log.hpp  Mat4.hpp  Position.hpp  Recorder.hpp  ReferenceFrame.hpp  Types.hpp  Units.hpp  Vec3.hpp
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+32 more)
src/: Application.cpp  CMakeLists.txt  ColumnVector.hpp  Error.hpp  Exception.cpp  Exception.hpp  KML.hpp  Log.hpp  Main.cpp  Mat4.cpp  Mat4.hpp  Matrix.cpp  Matrix.hpp  Recorder.cpp  Recorder.hpp  ReferenceFrame.cpp  ReferenceFrame.hpp  Solver.cpp  Solver.hpp  Types.hpp  Units.cpp  Units.hpp  Vec3.cpp  Vec3.hpp  VelocityState.cpp  VelocityState.hpp
tests/: CMakeLists.txt  TestFloatHelper.hpp  TestHelper.hpp  test_Attitude.cpp  test_Error.cpp  test_Exception.cpp  test_Log.cpp  test_Mat4.cpp  test_Position.cpp  test_Recorder.cpp  test_ReferenceFrame.cpp  test_Units.cpp  test_Vec3.cpp  test_main.cpp
